# mbr-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  clippy.toml  deny.toml
.claude/worktrees/: forensicnomicon  gpt-forensic
.github/workflows/: ci.yml  fuzz.yml
core/: Cargo.toml
core/src/: carve.rs  diag.rs  ebr.rs  lib.rs  mbr.rs  partition.rs  signature.rs
docs/: privacy.md  terms.md
forensic/: Cargo.toml
forensic/src/: analyse.rs  bootkit.rs  diag.rs  findings.rs  lib.rs  provenance.rs
forensic/tests/: boot_context_tests.rs  boot_entropy_tests.rs  bootkit_tests.rs  canonical_finding_tests.rs  carve_tests.rs  chs_lba_tests.rs  disk_signature_tests.rs  fs_fingerprint_tests.rs  gpt_integration_tests.rs  gpt_tests.rs  knowledge_tests.rs  mbr_tests.rs  provenance_tests.rs  sector_size_tests.rs  serde_tests.rs  tier_a_logical_tests.rs  tier_a_table_tests.rs  vbr_tests.rs  wipe_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyse_full.rs  fuzz_forensic.rs  fuzz_parse.rs  parse_mbr_sector.rs
src/: analyse.rs  boot_code.rs  bootkit.rs  disk_signature.rs  ebr.rs  findings.rs  lib.rs  partition.rs  report.rs  signature.rs  wipe.rs
tests/: boot_entropy_tests.rs  bootkit_tests.rs  canonical_finding_tests.rs  carve_tests.rs  chs_lba_tests.rs  cli_tests.rs  disk_signature_tests.rs  fs_fingerprint_tests.rs  gpt_integration_tests.rs  gpt_tests.rs  knowledge_tests.rs  mbr_tests.rs  provenance_tests.rs  report_tests.rs  sector_size_tests.rs  serde_tests.rs  tier_a_logical_tests.rs  tier_a_table_tests.rs  vbr_tests.rs  wipe_tests.rs
