[package]
name = "mbr-forensic"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Forensic MBR parser — structure, anomaly detection, gap analysis, slack-space carving, and filesystem fingerprinting"
repository = "https://github.com/SecurityRonin/mbr-forensic"
keywords = ["forensics", "mbr", "partition", "disk-image"]
categories = ["parser-implementations", "filesystem"]
exclude = ["fuzz/", ".github/", ".pre-commit-config.yaml", "deny.toml", "renovate.json"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
tempfile = "3"
