[workspace]
resolver = "2"
members = ["core", "forensic"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
# Same stylistic family as the cast_* allows above: width-widening casts on
# disk-geometry arithmetic read more clearly as `x as u64` than `u64::from(x)`.
cast_lossless = { level = "allow", priority = 1 }
# Hex/byte signature tables and disk-offset literals are deliberately written
# without digit separators to mirror the on-disk layout.
unreadable_literal = { level = "allow", priority = 1 }
# The partition-family/filesystem compatibility matrix and the anomaly builder
# are intentionally long, flat, and exhaustive — splitting them hurts clarity.
too_many_lines = { level = "allow", priority = 1 }
unnested_or_patterns = { level = "allow", priority = 1 }
