[package]
name = "mbr-partition-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust read-only Master Boot Record (MBR) parser — sectors, partition tables, EBR chains, GPT/VBR cross-validation primitives, boot-code and filesystem fingerprinting"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mbr-partition-core"
keywords = ["forensics", "mbr", "partition", "disk-image"]
categories = ["parser-implementations", "filesystem"]
exclude = ["fuzz/", ".github/", ".pre-commit-config.yaml", "deny.toml", "renovate.json"]

[lib]
name = "mbr"

[features]
default = []
trace = ["dep:tracing"]
serde = ["forensicnomicon/serde", "dep:serde"]

[dependencies]
thiserror = { workspace = true }
forensicnomicon.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[lints]
workspace = true
