[package]
name = "mbr-forensic-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mbr-forensic]
path = ".."

[[bin]]
name = "parse_mbr_sector"
path = "fuzz_targets/parse_mbr_sector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "analyse_full"
path = "fuzz_targets/analyse_full.rs"
test = false
doc = false
bench = false
